fixade bredden på gula knappen i features, la till 2 st (spacers) i features mallen för att få text spacing att stämma

--- a/css/style.scss
+++ b/css/style.scss
@@ -334,19 +334,25 @@ padding: 16px;
             .box-title {
                 font-size: 45px;
                 font-weight: 700;
-                padding-top: 10px;
-                padding-bottom: 10px; 
+                margin-top: 20px;
+                margin-bottom: 40px; 
 
             }
 
             .btn-yellow {
+                display: block;
+                text-align: center;
 
             }
         }
 
+        .left-spacer{
+            flex: 0.3;
+        }
+
         .grid-container {
             // background-color: #7c7c7c;
-            flex: 3;
+            flex: 4;
             display: grid;
             grid-template-columns: repeat(2, minmax(0, 1fr));
             padding: 0 40px;
@@ -369,7 +375,7 @@ padding: 16px;
         }
         
         .right-spacer{
-            flex: 1;
+            flex: 0.8;
         }
 
     }   
